--- a/notebooks/using_classes.ipynb
+++ b/notebooks/using_classes.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-31 17:21:57.621135: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -425,7 +424,7 @@
        "[138305 rows x 47 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +461,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,13 +551,12 @@
     "data_test = p.transform(\n",
     "    X = X_test,\n",
     "    y = y_test\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,16 +573,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7f5ef3709bb0>"
+       "<keras.engine.sequential.Sequential at 0x7f2f40418850>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,15 +590,13 @@
    "source": [
     "from mlex.pipelines.simple_pipeline import SimplePipeline\n",
     "from mlex import SimpleRNNModel\n",
-    "\n",
     "my_model = SimpleRNNModel(input_shape=Xt.shape)\n",
-    "\n",
-    "my_model.get_model()\n"
+    "my_model.get_model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,22 +605,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " simple_rnn_4 (SimpleRNN)    (None, 138305, 16)        992       \n",
+      " simple_rnn (SimpleRNN)      (None, 138305, 16)        992       \n",
       "                                                                 \n",
-      " simple_rnn_5 (SimpleRNN)    (None, 16)                528       \n",
+      " simple_rnn_1 (SimpleRNN)    (None, 16)                528       \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 1)                 17        \n",
+      " dense (Dense)               (None, 1)                 17        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1,537\n",
@@ -647,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -661,35 +657,42 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-27 14:45:02.945280: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_14' with dtype int32\n",
-      "\t [[{{node Placeholder/_14}}]]\n",
-      "2024-05-27 14:45:02.945786: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_8' with dtype int32 and shape [69143]\n",
-      "\t [[{{node Placeholder/_8}}]]\n"
+      "2024-05-31 17:22:19.634870: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_8' with dtype int32 and shape [69143]\n",
+      "\t [[{{node Placeholder/_8}}]]\n",
+      "2024-05-31 17:22:19.635573: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_28' with dtype int32 and shape [69143]\n",
+      "\t [[{{node Placeholder/_28}}]]\n",
+      "2024-05-31 17:22:20.974128: I tensorflow/compiler/xla/service/service.cc:169] XLA service 0x5bc55e40 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2024-05-31 17:22:20.974178: I tensorflow/compiler/xla/service/service.cc:177]   StreamExecutor device (0): NVIDIA GeForce RTX 2080 SUPER, Compute Capability 7.5\n",
+      "2024-05-31 17:22:20.974192: I tensorflow/compiler/xla/service/service.cc:177]   StreamExecutor device (1): NVIDIA GeForce RTX 2080 SUPER, Compute Capability 7.5\n",
+      "2024-05-31 17:22:20.979520: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:269] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "2024-05-31 17:22:21.115012: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:424] Loaded cuDNN version 8600\n",
+      "2024-05-31 17:22:21.149930: I tensorflow/tsl/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2024-05-31 17:22:21.218335: I ./tensorflow/compiler/jit/device_compiler.h:180] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "541/541 [==============================] - 3s 3ms/step - loss: 0.2964 - acc: 0.8911 - auc: 0.7787\n",
+      "541/541 [==============================] - 10s 15ms/step - loss: 0.2854 - acc: 0.8911 - auc: 0.8017\n",
       "Epoch 2/10\n",
-      "541/541 [==============================] - 2s 3ms/step - loss: 0.2541 - acc: 0.9032 - auc: 0.8514\n",
+      "541/541 [==============================] - 8s 15ms/step - loss: 0.2471 - acc: 0.8992 - auc: 0.8687\n",
       "Epoch 3/10\n",
-      "541/541 [==============================] - 2s 3ms/step - loss: 0.2403 - acc: 0.9065 - auc: 0.8722\n",
+      "541/541 [==============================] - 8s 15ms/step - loss: 0.2388 - acc: 0.9027 - auc: 0.8799\n",
       "Epoch 4/10\n",
-      "541/541 [==============================] - 2s 3ms/step - loss: 0.2305 - acc: 0.9095 - auc: 0.8856\n",
+      "541/541 [==============================] - 8s 15ms/step - loss: 0.2342 - acc: 0.9053 - auc: 0.8864\n",
       "Epoch 5/10\n",
-      "541/541 [==============================] - 2s 3ms/step - loss: 0.2218 - acc: 0.9128 - auc: 0.8960\n",
+      "541/541 [==============================] - 8s 15ms/step - loss: 0.2303 - acc: 0.9074 - auc: 0.8909\n",
       "Epoch 6/10\n",
-      "541/541 [==============================] - 2s 3ms/step - loss: 0.2147 - acc: 0.9145 - auc: 0.9039\n",
+      "541/541 [==============================] - 8s 15ms/step - loss: 0.2262 - acc: 0.9087 - auc: 0.8943\n",
       "Epoch 7/10\n",
-      "541/541 [==============================] - 2s 3ms/step - loss: 0.2088 - acc: 0.9176 - auc: 0.9099\n",
+      "541/541 [==============================] - 8s 15ms/step - loss: 0.2228 - acc: 0.9103 - auc: 0.8966\n",
       "Epoch 8/10\n",
-      "541/541 [==============================] - 2s 3ms/step - loss: 0.2049 - acc: 0.9191 - auc: 0.9134\n",
+      "541/541 [==============================] - 8s 14ms/step - loss: 0.2200 - acc: 0.9117 - auc: 0.8989\n",
       "Epoch 9/10\n",
-      "541/541 [==============================] - 2s 3ms/step - loss: 0.2013 - acc: 0.9211 - auc: 0.9167\n",
+      "541/541 [==============================] - 8s 15ms/step - loss: 0.2171 - acc: 0.9125 - auc: 0.9015\n",
       "Epoch 10/10\n",
-      "541/541 [==============================] - 2s 3ms/step - loss: 0.1987 - acc: 0.9224 - auc: 0.9193\n"
+      "541/541 [==============================] - 8s 14ms/step - loss: 0.2143 - acc: 0.9153 - auc: 0.9040\n"
      ]
     }
    ],
@@ -706,29 +709,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-05-13 14:20:31.654965: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_14' with dtype int32\n",
-      "\t [[{{node Placeholder/_14}}]]\n",
-      "2024-05-13 14:20:31.655953: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype double and shape [69152,45]\n",
-      "\t [[{{node Placeholder/_0}}]]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "541/541 [==============================] - 4s 8ms/step\n"
+      "541/541 [==============================] - 2s 4ms/step\n"
      ]
     }
    ],
    "source": [
     "y_pred = my_model.predict(data_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "69143"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y_pred)"
    ]
   },
   {
